--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prettier": "^3.1.1",
         "prettier-plugin-astro": "^0.12.3",
         "prettier-plugin-svelte": "^3.1.2",
-        "prettier-plugin-tailwindcss": "^0.5.10"
+        "prettier-plugin-tailwindcss": "^0.5.10",
+        "sharp": "^0.33.1"
     }
 }
