--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/check": "^0.3.4",
-        "@astrojs/svelte": "^5.0.3",
+        "@astrojs/check": "^0.9.3",
+        "@astrojs/react": "^3.6.2",
+        "@astrojs/svelte": "^5.7.0",
         "@astrojs/tailwind": "^5.1.0",
-        "astro": "^4.1.0",
-        "sass": "^1.69.7",
-        "svelte": "^4.2.8",
-        "tailwindcss": "^3.4.0",
-        "typescript": "^5.3.3"
+        "@types/react": "^18.3.7",
+        "@types/react-dom": "^18.3.0",
+        "astro": "^4.15.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "sass": "^1.78.0",
+        "svelte": "^4.2.19",
+        "tailwindcss": "^3.4.11",
+        "typescript": "^5.6.2"
     },
     "devDependencies": {
-        "prettier": "^3.1.1",
-        "prettier-plugin-astro": "^0.12.3",
-        "prettier-plugin-svelte": "^3.1.2",
-        "prettier-plugin-tailwindcss": "^0.5.10",
-        "sharp": "^0.33.1"
+        "prettier": "^3.3.3",
+        "prettier-plugin-astro": "^0.14.1",
+        "prettier-plugin-svelte": "^3.2.6",
+        "prettier-plugin-tailwindcss": "^0.6.6",
+        "sharp": "^0.33.5"
     }
 }
