chore: adding new content

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
         "@astrojs/react": "^3.6.2",
         "@astrojs/svelte": "^5.7.0",
         "@astrojs/tailwind": "^5.1.0",
+        "@fontsource-variable/work-sans": "^5.1.0",
+        "@fontsource/pathway-gothic-one": "^5.1.0",
         "@types/react": "^18.3.7",
         "@types/react-dom": "^18.3.0",
         "astro": "^4.15.4",
+        "framer-motion": "^11.5.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "sass": "^1.78.0",
